<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/layout_powerstats"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:paddingHorizontal="@dimen/default_start_end_padding_mid"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:orientation="horizontal"
        android:padding="6dp">

        <TextView
            android:id="@+id/tvPowerStats_intelligence_title"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:text="@string/powerstats_intelligence"
            android:textColor="@color/black"
            android:textSize="16sp"
            android:textStyle="bold"
            />
        <TextView
            android:id="@+id/tvPowerStats_intelligence_content"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="@dimen/default_bottom_padding"
            android:textAppearance="?attr/textAppearanceBody2"
            />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:orientation="horizontal"
        android:padding="6dp">

        <TextView
            android:id="@+id/tvPowerStats_strength_title"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:text="@string/powerstats_strength"
            android:textColor="@color/black"
            android:textSize="16sp"
            android:textStyle="bold"
            />
        <TextView
            android:id="@+id/tvPowerStats_strength_content"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="@dimen/default_bottom_padding"
            android:textAppearance="?attr/textAppearanceBody2"
            />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:orientation="horizontal"
        android:padding="6dp">

        <TextView
            android:id="@+id/tvPowerStats_speed_title"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:text="@string/powerstats_speed"
            android:textColor="@color/black"
            android:textSize="16sp"
            android:textStyle="bold"
            />
        <TextView
            android:id="@+id/tvPowerStats_speed_content"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="@dimen/default_bottom_padding"
            android:textAppearance="?attr/textAppearanceBody2"
            />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:orientation="horizontal"
        android:padding="6dp">

        <TextView
            android:id="@+id/tvPowerStats_durability_title"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:text="@string/powerstats_durability"
            android:textColor="@color/black"
            android:textSize="16sp"
            android:textStyle="bold"
            />
        <TextView
            android:id="@+id/tvPowerStats_durability_content"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="@dimen/default_bottom_padding"
            android:textAppearance="?attr/textAppearanceBody2"
            />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:orientation="horizontal"
        android:padding="6dp">

        <TextView
            android:id="@+id/tvPowerStats_power_title"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:text="@string/powerstats_power"
            android:textColor="@color/black"
            android:textSize="16sp"
            android:textStyle="bold"
            />
        <TextView
            android:id="@+id/tvPowerStats_power_content"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="@dimen/default_bottom_padding"
            android:textAppearance="?attr/textAppearanceBody2"
            />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:orientation="horizontal"
        android:padding="6dp">

        <TextView
            android:id="@+id/tvPowerStats_combat_title"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:text="@string/powerstats_combat"
            android:textColor="@color/black"
            android:textSize="16sp"
            android:textStyle="bold"
            />
        <TextView
            android:id="@+id/tvPowerStats_combat_content"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="@dimen/default_bottom_padding"
            android:textAppearance="?attr/textAppearanceBody2"
            />
    </LinearLayout>
</LinearLayout>