<?xml version="1.0" encoding="utf-8"?>


<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".ui.fragments.SuperHeroDetailsFragment"
    android:orientation="vertical">

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">




            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/ivSuperHeroImg"
                    android:background="@color/black"
                    android:layout_width="250dp"
                    android:layout_gravity="center_horizontal"
                    android:layout_height="wrap_content"/>


                <TextView
                    android:id="@+id/tvSuperHeroId"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="16sp"
                    android:visibility="gone"
                    android:textColor="@color/black"
                    android:hint="SuperHeroId"/>
                <TextView
                    android:id="@+id/tvHeroName"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingHorizontal="16sp"
                    android:textSize="32sp"
                    android:textColor="@color/black"
                    android:hint="SuperHeroId"/>


                    <com.alespero.expandablecardview.ExpandableCardView
                        android:id="@+id/powerstats"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        app:title="@string/title_powerstats"
                        app:icon="@drawable/ic_align_vertical_bottom"
                        app:inner_view="@layout/superhero_powerstats_layout"
                        app:expandOnClick="true"
                        app:animationDuration="300"
                        app:startExpanded="false"/>


                    <com.alespero.expandablecardview.ExpandableCardView
                        android:id="@+id/profile"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        app:title="@string/title_biography"
                        app:icon="@drawable/ic_history_edu"
                        app:inner_view="@layout/superhero_biography_layout"
                        app:expandOnClick="true"
                        app:animationDuration="300"
                        app:startExpanded="false"/>

                    <com.alespero.expandablecardview.ExpandableCardView
                        android:id="@+id/exCvAppearance"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        app:title="@string/title_appearance"
                        app:icon="@drawable/ic_face_retouching_natural"
                        app:inner_view="@layout/superhero_appearance_layout"
                        app:expandOnClick="true"
                        app:animationDuration="300"
                        app:startExpanded="false"/>

                    <com.alespero.expandablecardview.ExpandableCardView
                        android:id="@+id/exCvWork"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        app:title="@string/title_work"
                        app:icon="@drawable/ic_work"
                        app:inner_view="@layout/superhero_work_layout"
                        app:expandOnClick="true"
                        app:animationDuration="300"
                        app:startExpanded="false"/>

                    <com.alespero.expandablecardview.ExpandableCardView
                        android:id="@+id/exCvConnections"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        app:title="@string/title_connections"
                        app:icon="@drawable/ic_connect_without_contact"
                        app:inner_view="@layout/superhero_connections_layout"
                        app:expandOnClick="true"
                        app:animationDuration="300"
                        android:scrollbars="vertical"
                        app:startExpanded="false"/>

            </LinearLayout>


    </androidx.core.widget.NestedScrollView>




</LinearLayout>