<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/layout_appearance"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:paddingHorizontal="@dimen/default_start_end_padding_mid"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:orientation="horizontal"
        android:padding="6dp">

        <TextView
            android:id="@+id/tvAppearance_gender_title"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:text="@string/biography_gender"
            android:textColor="@color/black"
            android:textSize="16sp"
            android:textStyle="bold"
            />
        <TextView
            android:id="@+id/tvAppearance_gender_content"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="@dimen/default_bottom_padding"
            android:justificationMode="inter_word"
            android:inputType="textMultiLine"
            android:textAppearance="?attr/textAppearanceBody2"
            />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:orientation="horizontal"
        android:padding="6dp">

        <TextView
            android:id="@+id/tvAppearance_race_title"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:text="@string/appearance_race"
            android:textColor="@color/black"
            android:textSize="16sp"
            android:textStyle="bold"
            />
        <TextView
            android:id="@+id/tvAppearance_race_content"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="@dimen/default_bottom_padding"
            android:justificationMode="inter_word"
            android:inputType="textMultiLine"
            android:textAppearance="?attr/textAppearanceBody2"
            />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:orientation="horizontal"
        android:padding="6dp">

        <TextView
            android:id="@+id/tvAppearance_height_title"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:text="@string/appearance_height"
            android:textColor="@color/black"
            android:textSize="16sp"
            android:textStyle="bold"
            />
        <TextView
            android:id="@+id/tvAppearance_height_content"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="@dimen/default_bottom_padding"
            android:justificationMode="inter_word"
            android:inputType="textMultiLine"
            android:textAppearance="?attr/textAppearanceBody2"
            />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:orientation="horizontal"
        android:padding="6dp">

        <TextView
            android:id="@+id/tvAppearance_weight_title"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:text="@string/appearance_weight"
            android:textColor="@color/black"
            android:textSize="16sp"
            android:textStyle="bold"
            />
        <TextView
            android:id="@+id/tvAppearance_weight_content"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="@dimen/default_bottom_padding"
            android:justificationMode="inter_word"
            android:inputType="textMultiLine"
            android:textAppearance="?attr/textAppearanceBody2"
            />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:orientation="horizontal"
        android:padding="6dp">

        <TextView
            android:id="@+id/tvAppearance_eye_color_title"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:text="@string/appearance_eye_color"
            android:textColor="@color/black"
            android:textSize="16sp"
            android:textStyle="bold"
            />
        <TextView
            android:id="@+id/tvAppearance_eye_color_content"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="@dimen/default_bottom_padding"
            android:justificationMode="inter_word"
            android:inputType="textMultiLine"
            android:textAppearance="?attr/textAppearanceBody2"
            />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:orientation="horizontal"
        android:padding="6dp">

        <TextView
            android:id="@+id/tvAppearance_hair_color_title"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:text="@string/appearance_hair_color"
            android:textColor="@color/black"
            android:textSize="16sp"
            android:textStyle="bold"
            />
        <TextView
            android:id="@+id/tvAppearance_hair_color_content"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="@dimen/default_bottom_padding"
            android:justificationMode="inter_word"
            android:inputType="textMultiLine"
            android:textAppearance="?attr/textAppearanceBody2"
            />
    </LinearLayout>
</LinearLayout>